<resources>
    <string name="app_name">Courses</string>
    <string name="main">Main</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="more">More details</string>
    <string name="icon_more_details">Icon more details</string>
    <string name="course_cover">Course cover</string>
    <string name="search_icon">Search icon</string>
    <string name="filter_icon">Filter icon</string>
    <string name="hint_search">Search courses…</string>
    <string name="sort_icon">Sort icon</string>
    <string name="by_date_added">By date added</string>
    <string name="by_popular">By popular</string>
    <string name="by_rating">By rating</string>
    <string name="author_image">Author image</string>
    <string name="author">Author</string>
    <string name="start_the_course">Start the course</string>
    <string name="go_to_the_platform">Go to the platform</string>
    <string name="about_course">About course</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="back_icon">Icon back</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="free">Free</string>
    <string name="no_favorite_courses">No favorite courses</string>
    <string name="course_added">Course added</string>
    <string name="course_removed">Course removed</string>
</resources>