<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".main_screen.MainFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contentStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contentEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <LinearLayout
        android:id="@+id/linearSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/courses"
        app:layout_constraintEnd_toEndOf="@id/contentEnd"
        app:layout_constraintStart_toStartOf="@id/contentStart"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_gray"
            app:cardCornerRadius="32dp"
            app:strokeWidth="0dp">

            <LinearLayout
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/search_icon"
                    android:padding="16dp"
                    android:src="@drawable/ic_search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_search" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/filters"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/dark_gray"
            app:cardCornerRadius="32dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@color/dark_gray"
                android:contentDescription="@string/filter_icon"
                android:src="@drawable/ic_filter"
                android:textSize="12sp" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/courses"
        app:layout_constraintEnd_toEndOf="@id/contentEnd"
        app:layout_constraintTop_toBottomOf="@id/linearSearch"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_date_added"
            android:textAppearance="?textAppearanceLabelLarge"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="11.21dp"
            android:layout_height="13.34dp"
            android:layout_marginStart="2.4dp"
            android:layout_marginTop="1.34dp"
            android:contentDescription="@string/sort_icon"
            android:src="@drawable/ic_sort"
            app:tint="@color/green" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/contentEnd"
        app:layout_constraintStart_toStartOf="@id/contentStart"
        app:layout_constraintTop_toBottomOf="@id/sort_by"
        tools:listitem="@layout/course_card" />

</androidx.constraintlayout.widget.ConstraintLayout>