<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details_screen.DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/details_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/course_image"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:contentDescription="@string/course_cover"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/image_test" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/button_back"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="56dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="28dp"
                    app:cardElevation="10dp"
                    app:strokeWidth="0dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:contentDescription="@string/back_icon"
                        android:src="@drawable/ic_back"
                        android:textSize="12sp"
                        app:tint="@color/black" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/button_change_favorite_status"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="top|end"
                    android:layout_marginTop="56dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="28dp"
                    app:cardElevation="10dp"
                    app:strokeWidth="0dp">

                    <ImageView
                        android:id="@+id/image_favorite_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:contentDescription="@string/favorite_icon"
                        android:src="@drawable/ic_favorites"
                        android:textSize="12sp"
                        app:tint="@color/black" />

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/glass"
                        app:strokeWidth="0dp">

                        <TextView
                            android:id="@+id/course_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginVertical="4dp"
                            android:drawablePadding="4dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/font_size_small"
                            app:drawableLeftCompat="@drawable/ic_star_rating"
                            tools:text="4.9" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:backgroundTint="@color/glass"
                        app:strokeWidth="0dp">

                        <TextView
                            android:id="@+id/course_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginVertical="4dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/font_size_small"
                            tools:text="22 Мая 2024" />

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/course_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large"
                tools:text="Java-разработчик с нуля" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="32dp"
                    app:strokeWidth="0dp">

                    <ImageView
                        android:id="@+id/course_author_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/author_image"
                        tools:src="@drawable/image_author_test" />

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textColor="@color/stroke"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/course_author_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_medium_16"
                        android:textStyle="bold"
                        tools:text="Merion Academy" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_start_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:text="@string/start_the_course"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_medium_14"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_to_platform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_gray"
                    android:text="@string/go_to_the_platform"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_medium_14"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/about_course"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large" />

            <TextView
                android:id="@+id/course_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="106dp"
                android:textColor="@color/stroke"
                android:textSize="@dimen/font_size_medium_14"
                tools:text="У вас будет 7 видеоуроков в высоком качестве. На них спикер объясняет теорию и показывает как выполнять практические задания. Доступ к материалам сохраняется на 2 года
Кроме теоретических материалов вас ждут тесты и практические задания. Они помогут лучше запомнить новую информацию и прокачать навыки, которые необходимы для реальной работы с RabbitMQ.
" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/green"
        android:visibility="gone" />

    <TextView
        android:id="@+id/course_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/something_went_wrong"
        android:textSize="@dimen/font_size_medium_16"
        android:visibility="gone" />

</FrameLayout>